# UdL-practiques

./: .gitignore  README.md
1r/estructura-computadors-2/Practica-KIT-ensamblador/: .gitignore  README.md  VonNeumann.cnt  VonNeumann.hlp  default.sim  desktop.ini  main.ens
1r/estructura-computadors-2/Practica-KIT-ensamblador/utils/Programes_HundirFlota/: ascii_input.txt  ascii_output.txt
1r/programacio-II/P3-pico-babel/: .gitignore  movements.csv
1r/programacio-II/P3-pico-babel/src/domain/: Author.java  (+1 more)
2n/algorismica/P2-Batalla-a-l'illa/: .gitignore  .pylintrc  Checker.py  Generator.py  Makefile  README.md  batalla.hs  batalla.py  requirements.txt  sortida.txt
2n/arquitectura/P1-jerarquia-memoria/: README.md  calcul_array.c  exe  tr_calcul_array.prg
2n/estructures-dades/P1-SortingBenchmark/: .gitignore  README.md  pom.xml
2n/estructures-dades/P2-catalan/: .gitignore  pom.xml
2n/estructures-dades/P3-HeapSort/: pom.xml
2n/estructures-dades/P4-RandomizedTreaps/: pom.xml
2n/llenguatges-automats-i-gramatiques/P1-Autòmat/: .gitignore  README.md
2n/llenguatges-automats-i-gramatiques/P1-Autòmat/inputs/: input2022.txt  input2023.txt  input2024.txt
2n/llenguatges-automats-i-gramatiques/P1-Autòmat/minimizer/: __main__.py  automaton.py
2n/sistemes_operatius/P1-Pipes_senyals/: calculador.c  controlador.c  generador.c  monitora.sh
2n/xarxes/P1-RTP_RTSP/: .gitignore  README.md  TODO.md  pyproject.toml
2n/xarxes/P1-RTP_RTSP/src/xarxes2025/: __main__.py  cli.py  client.py  client_data.py  server.py  state_machine.py  udpdatagram.py  videoprocessor.py
(+80 files in other folders)
